--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "testPathIgnorePatterns": [
       "generator-exercise/"
     ]
+  },
+  "dependencies": {
+    "@types/jest": "^29.0.2"
   }
 }
